# rust-autoupdate

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: macos.rs
src/: lib.rs
tests/: test_main.rs
